# FashionAI

./: ARCHITECTURE.md  B-S架构图.html  PSW.txt  TODO-改进方向.txt  llm-request-example.html  patch.diff  start-backend-services.bat  start_fashion_ai.sh  upload-github.bat  系统架构图.html  系统架构图.md  结构化系统架构图.md
app/: page.tsx
comfyui-clothing/: API_ARCHITECTURE.md  API_INTEGRATION_TEST.md  LOGIN_TEST.md  REDESIGN_TEST.md  next.config.mjs  pnpm-lock.yaml
comfyui-runninghub/: .env.example  .gitignore  README.md  WORKFLOW_ARCHITECTURE.md  pyproject.toml  requirements.txt  running-hub-services-test.html  test_workflow.py  test_workflow_simple.py
comfyui-runninghub/app/: main.py
comfyui-runninghub/app/routers/: v1.py  workflow_endpoints.py
comfyui-runninghub/app/services/: config.py  logger.py  runninghub_client.py  task_manager.py
comfyui-runninghub/docs/: architecture.md
comfyui-runninghub/workflows/: complete_image_edit_workflow.py  complete_pattern_extract_workflow.py  complete_video_generation_workflow.py  image_edit_workflow.py  variant_overlay_workflow.py  workflow_manager.py
comfyui-tenant-service/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test_proxy.py
comfyui-tenant-service/app/: main.py
comfyui-tenant-service/app/models/: database.py
comfyui-tenant-service/app/routers/: auth.py  proxy.py  tenants.py
comfyui-tenant-service/app/services/: auth.py  config.py  database_init.py  image_storage.py  json_storage.py  logger.py  task_record_service.py
comfyui-tenant-service/database/: task_records.json  tenants.json  users.json
(+45 files in other folders)
